Use independent toolTipDelegate for each item.

BUG: 434657